resources/screen-common.less
/* ... */
body .oo-ui-icon-tray,
.mw-ui-icon-tray:before {
	background: url( "data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' stroke='%23@{banner-echo-font-color}' stroke-width = '2px' fill='none' viewBox='0 0 28 28'%3e%3cpath d='M 2 5 L 26 5 L 26 23 L 2 23 Z M 2 9 L 14 19 L 26 9 L 26 23 L 2 23 Z M 2 23 L 10 15 Z M 26 23 L 18 15 Z'/%3e%3c/svg%3e" ) no-repeat;
	background-size: cover;
}

body .oo-ui-icon-bell,
.mw-ui-icon-bell:before {
	background: url( "data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' stroke='%23@{banner-echo-font-color}' stroke-width = '2px' fill='none' viewBox='0 0 28 28'%3e%3cpath d='M 2 21 L 6 15 L 6 10 A 5 5 180 0 1 22 10 L 22 15 L 26 21 Z M 18 21.5 A 4 4.5 180 0 1 10 21.5'/%3e%3c/svg%3e" ) no-repeat;
	background-size: cover;
}

table.mw-interwikitable.body td.mw-interwikitable-local-yes {
	background: @content-background-color;
}

.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button {
	color: #fff;
}

.cosmos-header {
	border-bottom: 0;
}

#mw-content-wrapper {
	position: relative;
	z-index: 3;
	margin: 0 auto;
}

#mw-content .infobox {
	float: right;
}

.CosmosRail .module h3 {
	border-bottom: 3px solid @rail-header-bottom-border;
}

div.thumbinner {
	padding: 0;
	border: 0;

	.thumbcaption {
		padding: 10px;
		border-right: 1px solid @border-color;
		border-bottom: 1px solid @border-color;
		border-left: 1px solid @border-color;
		color: #3a3a3a;
	}
}

